<resources>
    <string name="app_name">Imbang App</string>

    <string name="login">Masuk</string>
    <string name="sign_in">Masuk</string>

    <string name="email">Email</string>
    <string name="sandi">Sandi</string>

    <string name="title_activity_login">login</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome !"</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="jt_jam">Jam</string>
    <string name="jt_menit">Menit</string>

    <string name="jk_jam">Jam</string>

    <string name="km_sehari">Makan per Hari</string>
    <string name="title_activity_menutama">menutama</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_setting">setting</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>